Fixed spacing between elements

--- a/core/app/assets/stylesheets/evidence/evidence_collection.css.less
+++ b/core/app/assets/stylesheets/evidence/evidence_collection.css.less
@@ -133,6 +133,7 @@
 }
 
 .evidence-votable {
+  padding-top: 20px;
   .evidence-relevance-vote-up, .evidence-relevance-vote-down {
     display: block;
   }
